--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "floppabot",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "an Eris Discord bot",
   "type": "module",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
   },
   "author": "billy",
