add 3 new commands and improve client options

--- a/.env-example
+++ b/.env-example
@@ -6,3 +6,9 @@ OWNER=""
 
 # prefix for classic non-slash commands
 PREFIX=","
+
+# whether or not to use custom colour (see below)
+USE_COLOR=0
+
+# default colour for embeds and whatnot in hex format i.e. E09050
+COLOR=""
