--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "floppabot",
-  "version": "2.1.1",
+  "version": "3.0.0",
   "description": "an Eris Discord bot",
   "type": "module",
   "main": "main.js",
@@ -10,6 +10,7 @@
   "author": "billy",
   "license": "MIT",
   "dependencies": {
+    "dateformat": "^5.0.3",
     "dotenv": "^16.0.2",
     "eris": "^0.17.1"
   }
