--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "billy",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.2",
     "eris": "^0.17.1"
