add an option to disable classic commands

--- a/.env-example
+++ b/.env-example
@@ -12,3 +12,6 @@ USE_COLOR=0
 
 # default colour for embeds and whatnot in hex format i.e. E09050
 COLOR=""
+
+# enable classic commands
+ENABLE_CLASSIC_COMMANDS=0
