huge logging overhaul

--- a/.env-example
+++ b/.env-example
@@ -4,14 +4,17 @@ TOKEN=""
 # discord user id of bot owner
 OWNER=""
 
+# enable classic commands (0=false, 1=true)
+ENABLE_CLASSIC_COMMANDS=1
+
 # prefix for classic non-slash commands
 PREFIX=","
 
-# whether or not to use custom colour (see below)
+# whether or not to use custom colour (see below) (0=false, 1=true)
 USE_COLOR=0
 
-# default colour for embeds and whatnot in hex format i.e. E09050
+# custom default colour for embeds and whatnot in hex format i.e. "E09050"
 COLOR=""
 
-# enable classic commands
-ENABLE_CLASSIC_COMMANDS=0
+# enable more verbose logging (0=false, 1=true)
+VERBOSE_LOGS=1
