--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "crypto-js": "^4.1.1",
     "dateformat": "^5.0.3",
     "dotenv": "^16.0.2",
-    "eris": "^0.17.1"
+    "eris": "^0.17.1",
+    "winston": "^3.8.2"
   }
 }
